--- a/styles/lib/var.scss
+++ b/styles/lib/var.scss
@@ -20,6 +20,7 @@ $base: (
   // 默认文档背景色
   bgcolor:          #fff,
   color:            #333,
-  images-url:        "../../images/"
+  // images-url:        "../../images/"
+  images-url:        "https://github.com/zorayoyo/resume/blob/master/images/"
 ) !default;
 
